# Suzaku

./: CMakeLists.txt  LICENSE  README.md
documentation/: IntermediateCodeSnippets.md  algorithms.md  grammar.ebnf
examples/: area.aspl  area.lm1  calculator.aspl  calculator.lm1
includes/: IRGenerator.hpp  binaryGenerator.hpp  debug.hpp  errorHandler.hpp  grammar.hpp  lexer.hpp  parser.hpp  semanticChecker.hpp
src/: IRGenerator.cpp  binaryGenerator.cpp  debug.cpp  errorHandler.cpp  lexer.cpp  main.cpp  parser.cpp  semanticChecker.cpp
